backend/src/gateway/manifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 10
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: arpankumar1119/ec5-gateway:latest
          volumeMounts:
            - name: gateway-storage
              mountPath: /var/lib/upload  # Change this to the desired directory path inside the container
      volumes:
        - name: gateway-storage
          persistentVolumeClaim:
            claimName: gateway-pvc  # Reference the PVC here
